--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
 	"author": "Michele Nasti",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"test-watch": "nodemon --watch . --exec 'jest || true'",
+		"build": "npm test && webpack --config ./webpack.config.js"
 	},
 	"license": "ISC",
 	"devDependencies": {
 		"eslint": "^5.8.0",
 		"eslint-plugin-jest": "^22.0.0",
-		"jest": "^23.6.0"
-	}
+		"jest": "^23.6.0",
+		"jsdom": "^13.0.0",
+		"nodemon": "^1.18.6",
+		"webpack": "^4.25.1",
+		"webpack-cli": "^3.1.2"
+	},
+	"dependencies": {}
 }
