--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-	"name": "html-table-builder",
-	"version": "1.0.0",
-	"description": "A function that converts a JS object to an HTML table.",
-	"author": "Michele Nasti",
-	"main": "index.js",
-	"scripts": {
-		"test": "jest",
-		"test-watch": "nodemon --watch . --exec 'jest || true'",
-		"build": "npm test && webpack --config ./webpack.config.js",
-		"mdserver": "md-server Readme.md"
-	},
-	"license": "ISC",
-	"devDependencies": {
-		"eslint": "^5.8.0",
-		"eslint-plugin-jest": "^22.0.0",
-		"jest": "^23.6.0",
-		"jsdom": "^13.0.0",
-		"md-server": "0.0.5",
-		"nodemon": "^1.18.6",
-		"webpack": "^4.25.1",
-		"webpack-cli": "^3.1.2"
-	},
-	"dependencies": {}
+  "name": "html-table-builder",
+  "version": "1.0.0",
+  "description": "A function that converts a JS object to an HTML table.",
+  "author": "Michele Nasti",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "test-watch": "nodemon --watch . --exec 'jest || true'",
+    "build": "npm test && webpack --config ./webpack.config.js",
+    "mdserver": "md-server Readme.md"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "jsdom": "^13.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-plugin-jest": "^22.0.0",
+    "jest": "^23.6.0",
+    "md-server": "0.0.5",
+    "nodemon": "^1.18.6",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
