--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "html-table-builder",
   "version": "1.0.0",
   "description": "A function that converts a JS object to an HTML table.",
-  "author": "Michele Nasti",
+  "author": "Michele Nasti <michele@michelenasti.com> (https://michelenasti.com)",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -22,5 +22,16 @@
     "nodemon": "^1.18.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "homepage": "https://github.com/musikele/html-table-builder",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "https://opensource.org/licenses/apache2.0.php"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "github:musikele/html-table-builder"
   }
 }
